objects/CMRelationship__c.object
<CustomObject>
    <description>SFDC1-2455 CM Relationships is used to track the Live CM Brokers on the Account Additional fields object</description>
    <fields>
        <fullName>AccountStatus__c</fullName>
        <description>SFDC1-2455 CM Relationships</description>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Inactive / Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingEndDate__c</fullName>
        <description>SFDC1-2455 CM Relationships</description>
        <label>Billing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillingStartDate__c</fullName>
        <description>SFDC1-2455 CM Relationships</description>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BrokerContract__c</fullName>
        <description>SFDC1-2455 CM Relationships&apos; Broker Contract</description>
        <label>Broker Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>CM Clients</relationshipLabel>
        <relationshipName>Contract</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BrokerName__c</fullName>
        <description>SFDC1-2455 CM Relationships&apos; Broker Name</description>
        <formula>HYPERLINK(BrokerContract__r.Account.Id, BrokerContract__r.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <description>SFDC1-2455 CM Relationships&apos; Broker</description>
        <formula>HYPERLINK (BrokerContract__r.Account.Name,&quot;&quot;) &amp; HYPERLINK(BrokerContract__r.AccountId, BrokerContract__r.Account.Name) 
 &amp; &quot;, Contract Number &quot; &amp; HYPERLINK(BrokerContract__c, BrokerContract__r.ContractNumber ) &amp; &quot;: &quot; &amp; IF(BrokerContract__r.LiveCMClients__c = 1, TEXT(BrokerContract__r.LiveCMClients__c) &amp; &quot; Live Client&quot;, TEXT(BrokerContract__r.LiveCMClients__c) &amp; &quot; Live Clients&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMAnnualBilling__c</fullName>
        <description>SFDC1-2455 CM Relationships</description>
        <label>CM Annual Billing</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClientName__c</fullName>
        <description>SFDC1-5631 CM Relationships custom field</description>
        <formula>HYPERLINK(Client__c, Client__r.Name)</formula>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <description>SFDC1-2455 CM Relationships&apos; Client</description>
        <label>Client</label>
        <referenceTo>AdditionalAccountFields__c</referenceTo>
        <relationshipLabel>CM Brokers</relationshipLabel>
        <relationshipName>CMBrokers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>Added as part of migration exercise by Paras</description>
        <externalId>true</externalId>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>Added as part of migration exercise by Paras</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>Added as part of migration exercise by Paras</description>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <label>CM Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>CM #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CM Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>